--- a/src/app/campaign/view/view.component.html
+++ b/src/app/campaign/view/view.component.html
@@ -37,12 +37,21 @@
                                   </tr>
                               </tfoot>
                               <tbody>
-                                  <tr *ngFor="let row of dataTable.dataRows">
-                                      <td>{{row[0]}}</td>
-                                      <td>{{row[1]}}</td>
-                                      <td>{{row[2]}}</td>
-                                      <td>{{row[3]}}</td>
-                                      <td>{{row[4]}}</td>
+                                  <tr *ngFor="let row of ($getCampaign|async)">
+                                      <td>{{row?.title}}</td>
+                                      <td>{{row?.description}}</td>
+                                      <td>{{row?.noOfWeeks}}</td>
+                                      <td>{{row?.startDate}}</td>
+                                      <td>
+                                      <div class="form-check">
+                                            <input class="form-check-input" type="checkbox" [(ngModel)]="row.isApproved" disabled="true">
+                                            <span class="form-check-sign">
+                                              <span class="check"></span>
+                                            </span>
+                    
+                                          </div>
+                                        </td>
+                                        <td><img class="img-fluid" src="{{row?.displayImage}}" alt="No Image Available"></td>
                                       <td class="text-right">
                                         <a href="#" class="btn btn-link btn-info btn-just-icon like"><i class="material-icons">favorite</i></a>
                                         <a href="#" class="btn btn-link btn-warning btn-just-icon edit"><i class="material-icons">dvr</i></a>
