--- a/src/app/campaign/view/view.component.html
+++ b/src/app/campaign/view/view.component.html
@@ -53,9 +53,8 @@
                                         </td>
                                         <td><img class="img-fluid" src="{{row?.displayImage}}" alt="No Image Available"></td>
                                       <td class="text-right">
-                                        <a href="#" class="btn btn-link btn-info btn-just-icon like"><i class="material-icons">favorite</i></a>
-                                        <a href="#" class="btn btn-link btn-warning btn-just-icon edit"><i class="material-icons">dvr</i></a>
-                                        <a href="#" class="btn btn-link btn-danger btn-just-icon remove"><i class="material-icons">close</i></a>
+                                        <button *ngIf="row.isApproved" (click) = "verifyCoupnCodeFn(row?.id)" class="btn btn-danger btn-sm">Verify CouponCode</button>
+                                        <button *ngIf="!row.isApproved" (click)="notApprovedMessage()" class="btn btn-light btn-sm">Not Approved Yet</button>
                                       </td>
                                   </tr>
                               </tbody>
