--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -28,23 +28,13 @@
                     <div class="collapse" id="collapseExample">
                         <ul class="nav">
                             <li class="nav-item">
-                                <a href="javascript:void(0)" class="nav-link">
-                                    <span class="sidebar-mini">MP</span>
-                                    <span class="sidebar-normal">My Profile</span>
+                                <a href="#" class="nav-link">
+                                    <!-- <span class="sidebar-mini">MP</span> -->
+                                    <span (click)="onLogOut()"  class="sidebar-normal">Logout</span>
                                 </a>
                             </li>
-                            <li class="nav-item">
-                                <a href="javascript:void(0)" class="nav-link">
-                                    <span class="sidebar-mini">EP</span>
-                                    <span class="sidebar-normal">Edit Profile</span>
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="javascript:void(0)" class="nav-link">
-                                    <span class="sidebar-mini">S</span>
-                                    <span class="sidebar-normal">Settings</span>
-                                </a>
-                            </li>
+                            
+                            
                         </ul>
                     </div>
                 </div>
