--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -3,11 +3,11 @@
         <div class="logo">
           <a class="simple-text logo-mini">
             <div class="logo-img">
-                <img src="/assets/img/angular2-logo-white.png"/>
+                <!-- <img src="/assets/img/angular2-logo-white.png"/> -->
             </div>
           </a>
-            <a href="https://www.creative-tim.com" class="simple-text logo-normal">
-              Creative Tim
+            <a href="#" class="simple-text logo-normal">
+              Uninama
             </a>
         </div>
 
@@ -16,12 +16,12 @@
 
             <div class="user">
                 <div class="photo">
-                    <img src="./assets/img/faces/avatar.jpg" />
+                    <img src="./assets/img/faces/avatar1.jpg" />
                 </div>
                 <div class="user-info">
                     <a data-toggle="collapse" href="#collapseExample" class="collapsed">
                         <span>
-                            Tania Andrew
+                            {{merchant_name}}
                             <b class="caret"></b>
                         </span>
                     </a>
@@ -29,7 +29,7 @@
                         <ul class="nav">
                             <li class="nav-item">
                                 <a href="#" class="nav-link">
-                                    <!-- <span class="sidebar-mini">MP</span> -->
+                                    <span class="sidebar-mini">LG</span> 
                                     <span (click)="onLogOut()"  class="sidebar-normal">Logout</span>
                                 </a>
                             </li>
@@ -109,12 +109,12 @@
                         </ul>
                     </div>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a href="http://md-pro-angular.creative-tim.com/documentation/tutorial?ref=md-pro-archive" class="nav-link">
                         <i class="material-icons">school</i>
                         <p>Documentation</p>
                     </a>
-                </li>
+                </li> -->
             </ul>
 
         </div>
