--- a/src/app/campaign/view/view.component.html
+++ b/src/app/campaign/view/view.component.html
@@ -1,33 +1,12 @@
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-<div class="main-content">
-  <div class="container-fluid">
-        <!-- <input type="button" class="btn btn-primary" value="Create campagin" (click) = "CreateCampaign()"> -->
-      <div class="row" >
-          <div class="col-4">
-                <div class=" col-12 addCard">
-                    
-                        <div class="card card-product text-center " style="padding-top: 68px;" (click) = "CreateCampaign()">
-                          
-                            <a >
-                                    <i class="fas fa-plus fa-3x addBtn" ></i>
-                            </a>
-                          
-                          <div class="card-body">
-                            <h3 style="padding-bottom: 40px; margin: auto">Create New Campaign</h3>
-                            
-                            
-                          </div>
-                          
-                        </div>
-                    
-                      </div>
+<div class="container-fluid " style="padding-top: 50px">
+  <mat-tab-group>
+    <mat-tab label="Active Campaigns">
+      <app-current></app-current>
+    </mat-tab>
+    <mat-tab label="Pending Approval"></mat-tab>
+    <mat-tab label="Archived">
+      <app-archive></app-archive>
+    </mat-tab>
 
-          </div>
-          <div class="col-4" *ngFor="let row of $getCampaign| async">
-          <app-campaign-card [data]  = "row"></app-campaign-card>
-        </div>
-          
-         
-      <!-- end row -->
-  </div>
+  </mat-tab-group>
 </div>
