--- a/src/app/shared/campaign-card/campaign-card.component.html
+++ b/src/app/shared/campaign-card/campaign-card.component.html
@@ -1,17 +1,17 @@
 <div class="container">
   <div class="row">
-    
-      
-      <div class="col-12">
-          <div class="card card-product">
-            <div class="card-header card-header-image" data-header-animation="true">
-              <a href="#pablo">
-                <img class="img" src="{{data?.displayImage}}">
-              </a>
-            </div>
-            <div class="card-body">
-              <div class="card-actions text-center">
-                <!-- <button mat-raised-button type="button" class="btn btn-danger btn-link fix-broken-card">
+
+
+    <div class="col-12">
+      <div class="card card-product">
+        <div class="card-header card-header-image">
+          <a href="#pablo">
+            <img class="img" src="{{data?.displayImage}}">
+          </a>
+        </div>
+        <div class="card-body">
+          <div class="card-actions text-center">
+            <!-- <button mat-raised-button type="button" class="btn btn-danger btn-link fix-broken-card">
                   <i class="material-icons">build</i> Fix Header!
                 </button>
                 <button mat-raised-button type="button" class="btn btn-default btn-link" matTooltip="View" [matTooltipPosition]="'below'">
@@ -23,20 +23,20 @@
                 <button mat-raised-button type="button" class="btn btn-danger btn-link" matTooltip="Remove" [matTooltipPosition]="'below'">
                   <i class="material-icons">close</i>
                 </button> -->
-              </div>
-              <h4 class="card-title">
-                <a href="#pablo">{{data?.title}}</a>
-              </h4>
-              <div class="card-description">
-                {{data?.description}}
-               </div>
-            </div>
-            <div class="card-footer ">
-                 <button (click)="verifyCoupnCodeFn()" style="margin: auto"  class="btn btn-success " *ngIf="data?.isApproved">Verify Coupon Code</button>
-                 
-                <button (click)="notApprovedMessage()" style="margin: auto" class="btn btn-danger" *ngIf="!data?.isApproved">Not Verified Yet</button>
-            </div>
-            <!-- <div class="card-footer">
+          </div>
+          <h4 class="card-title">
+            <a href="#pablo">{{data?.title}}</a>
+          </h4>
+          <div class="card-description">
+            {{data?.description}}
+          </div>
+        </div>
+        <div class="card-footer ">
+          <button (click)="verifyCoupnCodeFn()" style="margin: auto" class="btn btn-success btn-sm" *ngIf="data?.isApproved">Verify Coupon Code</button>
+
+          <button (click)="notApprovedMessage()" style="margin: auto" class="btn btn-danger btn-sm" *ngIf="!data?.isApproved">Not Verified Yet</button>
+        </div>
+        <!-- <div class="card-footer">
               <div class="price">
                 <h4>$459/night</h4>
               </div>
@@ -44,9 +44,9 @@
                 <p class="card-category"><i class="material-icons">place</i> Milan, Italy</p>
               </div>
             </div> -->
-          </div>
-        </div>
-        <!-- end col-md-12 -->
+      </div>
     </div>
-
+    <!-- end col-md-12 -->
   </div>
+
+</div>
