--- a/src/app/shared/campaign-card/campaign-card.component.html
+++ b/src/app/shared/campaign-card/campaign-card.component.html
@@ -32,10 +32,23 @@
           </div>
         </div>
         <div class="card-footer ">
-          <button (click)="verifyCoupnCodeFn()" style="margin: auto" class="btn btn-success btn-sm" *ngIf="data?.isApproved">Verify Coupon Code</button>
+          <ng-container *ngIf="rejectedBtn; else elseTemplate">
 
-          <button (click)="notApprovedMessage()" style="margin: auto" class="btn btn-danger btn-sm" *ngIf="!data?.isApproved">Not Verified Yet</button>
+            <button style="margin: auto" class="btn  btn-sm" *ngIf="rejectedBtn" (click)="activateAgainFn(data?.id)">Activate Again</button>
+            <i matTooltip="This Campaign is Rejected" *ngIf="rejectedSign" class="fa fa-close" style="font-size:48px;color:red"></i>
+          </ng-container>
+          <ng-template #elseTemplate>
+            <button (click)="verifyCoupnCodeFn()" style="margin: auto" class="btn btn-success btn-sm" *ngIf="data?.isApproved">Verify Coupon Code</button>
+
+            <button (click)="notApprovedMessage()" style="margin: auto" class="btn btn-danger btn-sm" *ngIf="!data?.isApproved">Not Verified Yet</button>
+
+          </ng-template>
+
+
+
+
         </div>
+        <!-- <p>{{data?.endDate }}</p> -->
         <!-- <div class="card-footer">
               <div class="price">
                 <h4>$459/night</h4>
@@ -50,3 +63,5 @@
   </div>
 
 </div>
+
+<!-- | date: 'dd/MM/yyyy' -->
