--- a/src/app/campaign/current/current.component.scss
+++ b/src/app/campaign/current/current.component.scss
@@ -4,10 +4,10 @@
   }
 
   .addBtn {
-    color: white;
+    color: rgb(255, 255, 255);
   }
 
-  background: #b4b6ba;
+  background: #525458;
 
 }
 
@@ -15,4 +15,8 @@
   margin-top: 30px;
   padding: 0px 0px;
 
+}
+
+.card {
+  cursor: pointer
 }
