--- a/src/app/shared/coupon-verification/coupon-verification.component.html
+++ b/src/app/shared/coupon-verification/coupon-verification.component.html
@@ -5,7 +5,7 @@
       <input type="text" placeholder="Enter Coupon Code" formControlName="couponCode">
     </mat-dialog-content>
     <mat-dialog-actions>
-      <button mat-raised-button (click)="verifyCouponCode()">Verify
+      <button mat-raised-button (click)="verifyCouponCode()" class="btn btn-success">Verify
       </button>
       <button mat-button mat-dialog-close>cancle</button>
     </mat-dialog-actions>
