--- a/src/app/campaign/create/create.component.scss
+++ b/src/app/campaign/create/create.component.scss
@@ -1,3 +1,12 @@
 .resize left {
   visibility: hidden;
 }
+
+.for-admin {
+  padding: 10px 16px
+}
+
+.for-admin-p {
+  font-size: 11px;
+  color: rgb(175, 175, 175)
+}
