--- a/src/app/shared/campaign-card/campaign-card.component.html
+++ b/src/app/shared/campaign-card/campaign-card.component.html
@@ -4,14 +4,15 @@
 
     <div class="col-12">
       <div class="card card-product">
-        <div class="card-header card-header-image">
-          <a href="#pablo">
+        <div (click)="showDetailsFn()">
+          <div class="card-header card-header-image">
+
             <img class="img" src="{{data?.displayImage}}">
-          </a>
-        </div>
-        <div class="card-body">
-          <div class="card-actions text-center">
-            <!-- <button mat-raised-button type="button" class="btn btn-danger btn-link fix-broken-card">
+
+          </div>
+          <div class="card-body">
+            <div class="card-actions text-center">
+              <!-- <button mat-raised-button type="button" class="btn btn-danger btn-link fix-broken-card">
                   <i class="material-icons">build</i> Fix Header!
                 </button>
                 <button mat-raised-button type="button" class="btn btn-default btn-link" matTooltip="View" [matTooltipPosition]="'below'">
@@ -23,12 +24,14 @@
                 <button mat-raised-button type="button" class="btn btn-danger btn-link" matTooltip="Remove" [matTooltipPosition]="'below'">
                   <i class="material-icons">close</i>
                 </button> -->
-          </div>
-          <h4 class="card-title">
-            <a href="#pablo">{{data?.title}}</a>
-          </h4>
-          <div class="card-description">
-            {{data?.description}}
+            </div>
+            <h4 class="card-title">
+              {{data?.title}}
+            </h4>
+            <div class="card-description">
+              {{data?.description}}
+            </div>
+
           </div>
         </div>
         <div class="card-footer ">
