--- a/src/app/shared/campaign-card/campaign-card.component.html
+++ b/src/app/shared/campaign-card/campaign-card.component.html
@@ -7,7 +7,7 @@
         <div (click)="showDetailsFn()">
           <div class="card-header card-header-image">
 
-            <img class="img" src="{{data?.displayImage}}">
+            <img class="img-fluid campaignImage" class="img" src="{{data?.displayImage}}">
 
           </div>
           <div class="card-body">
