--- a/src/app/shared/campaign-detail/campaign-detail.component.html
+++ b/src/app/shared/campaign-detail/campaign-detail.component.html
@@ -2,7 +2,7 @@
   <form class="text-center">
 
     <mat-dialog-content>
-      <img src="{{data.displayImage}}">
+      <img class="img-fluid campaignImage" src="{{data.displayImage}}">
       <h3>{{data.title}}</h3>
       <p>Start Date: {{data.startDate| date: 'dd/MM/yyyy'}}</p><br>
 
