--- a/src/app/campaign/current/current.component.html
+++ b/src/app/campaign/current/current.component.html
@@ -3,7 +3,7 @@
   <div class="container-fluid">
     <!-- <input type="button" class="btn btn-primary" value="Create campagin" (click) = "CreateCampaign()"> -->
     <div class="row">
-      <div class="col-3">
+      <div class="col-md-3 col-sm-12 col-xs-12">
         <div class=" col-12 addCard">
 
           <div class="card card-product text-center " style="padding-top: 68px;" (click)="CreateCampaign()">
@@ -23,7 +23,7 @@
         </div>
 
       </div>
-      <div class="col-3" *ngFor="let row of $getCampaign | async">
+      <div class="col-md-3 col-sm-12 col-xs-12" *ngFor="let row of $getCampaign | async">
         <app-campaign-card [data]="row"></app-campaign-card>
       </div>
 
