--- a/src/app/main-page/main-campaign/main-campaign.component.html
+++ b/src/app/main-page/main-campaign/main-campaign.component.html
@@ -4,7 +4,7 @@
     <div class="col-12 text-center">
       <h3>Currnet Campaigns</h3>
     </div>
-    <div class="col-4 campaign-card" *ngFor="let row of $getCampaign | async">
+    <div class="col-md-4 col-sm-12 col-xs-12 campaign-card" *ngFor="let row of $getCampaign | async">
 
       <div class="card card-product">
         <div (click)="showDetailsFn(row)">
