--- a/src/app/main-page/main-campaign/main-campaign.component.html
+++ b/src/app/main-page/main-campaign/main-campaign.component.html
@@ -27,7 +27,7 @@
           </div>
         </div>
         <div class="card-footer ">
-          <button (click)="openDialog(row)" style="margin: auto" class="btn btn-success btn-lg" *ngIf="row?.isApproved">Verify Coupon Code</button>
+          <button (click)="openDialog(row)" style="margin: auto" class="btn btn-success btn-lg verifyBtn" *ngIf="row?.isApproved">Verify Coupon Code</button>
         </div>
 
       </div>
