--- a/src/app/campaign/create/create.component.html
+++ b/src/app/campaign/create/create.component.html
@@ -187,7 +187,7 @@
             <div class=row>
               <div class="col-12">
                 <mat-checkbox (change)="ambCheckBoxCilck($event.checked)">Do
-                  you want Ambassaders for your campaign?</mat-checkbox>
+                  you want Ambassadors for your campaign?</mat-checkbox>
               </div>
             </div>
             <div class=row>
